--- a/AndBible/res/values-pl/strings.xml
+++ b/AndBible/res/values-pl/strings.xml
@@ -49,7 +49,7 @@
   <!-- Preferences -->
   <string name="prefs_show_verseno_title">Numer wersetu</string>
   <string name="prefs_show_verseno_summary">Pokaż numer wersetu</string>
-  <string name="prefs_show_notes_title">Przypisy i x-refs</string>
+  <string name="prefs_show_notes_title">Przypisy i odsyłacze</string>
   <string name="prefs_show_notes_summary">Pokaż przypisy i odsyłacze</string>
   <string name="prefs_show_strongs_title">Pokaż numeracje Stronga</string>
   <string name="prefs_show_strongs_summary">Pokaż numeracje Stronga dla KJV</string>
@@ -153,4 +153,4 @@
   <string name="prefs_section_title_title">Tytuły sekcji</string>
   <string name="strongs_toggle_button_off">włączony</string>
   <string name="strongs_toggle_button_on">włączony</string>
-<string name="speak_queue">Kolejka</string><string name="speak_repeat">Powtórz</string><string name="select_text">Zaznacz tekst</string><string name="select_text_help">Przeciągnij powoli, aby wybrać. Następnie dotknij wybór aby skopiować.</string><string name="error_no_content">Brak zawartości dla wybranych wierszy</string><string name="mynote">Moja notatka</string><string name="mynote_add">Dodaj notatkę</string><string name="mynote_saved">Zapisane notaki</string><string name="mynote_view_edit">Moja notatki</string><string name="mynotes">Moje notatki</string><string name="prefs_show_mynotes_summary">Wersety z moich notatek oznacz ikoną</string><string name="prefs_show_mynotes_title">Pokaż ikony notatek</string><string name="save">Zapisz</string><string name="search_results">Znajdź wyniki</string></resources>
+<string name="speak_queue">Kolejka</string><string name="speak_repeat">Powtórz</string><string name="select_text">Zaznacz tekst</string><string name="select_text_help">Przeciągnij powoli, aby wybrać. Następnie dotknij wybór aby skopiować.</string><string name="error_no_content">Brak zawartości dla wybranego wiersza</string><string name="mynote">Moja notatka</string><string name="mynote_add">Dodaj notatkę</string><string name="mynote_saved">Moja notatka zapisana</string><string name="mynote_view_edit">Moja notatka</string><string name="mynotes">Moje notatki</string><string name="prefs_show_mynotes_summary">Wersety z moich notatek oznacz ikoną</string><string name="prefs_show_mynotes_title">Pokaż ikony notatek</string><string name="save">Zapisz</string><string name="search_results">Znajdź wyniki</string><string name="error_key_not_in_document">Nie znaleziono w dokumencie</string><string name="error_page_too_large">Strona za duża i nie może zostać wczytana</string></resources>
