--- a/AndBible/res/values-tr/strings.xml
+++ b/AndBible/res/values-tr/strings.xml
@@ -9,10 +9,10 @@
     <string name="app_name">And Bible</string>
 
 	<!-- Startup & Help -->
-    <string name="splash_top_text">"\n\"And God said, \'Let there be light,\' and there was light.\"\nGenesis 1:3"</string>
+    <string name="splash_top_text">"\n\'Tanrı, \"Işık olsun\" diye buyurdu ve ışık oldu.\'\nYaratılış 1:3"</string>
     <string name="help_text">Press the MENU key for actions\n\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger</string>
     <string name="help_text_long">"<b>Navigation</b>\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger \nDouble-tap toggles Fullscreen on/off. \n\n<b>Menu</b> \nPress the MENU key for actions \n\nTo download more documents press Menu/More/Download Documents \n\n<b>Speech</b>\nPress Speak to access a dialog to start or stop reading \n\n<b>Bookmarks</b>\nBookmarks can be added via the verse context menu. The Bookmark Manager is accessed via the main menu. The Bookmark Manager context menu allows bookmarks to be grouped using labels. \n\n<b>Search</b>\nSearch text can include special characters like *, ?, AND, OR, NOT (see \"Apache Lucene - Query Parser Syntax\" for more details) \n\n<b>Context Menus</b> \nLong press on the bible view to open the context menu for actions affecting the current verse. \nLong press on a document in the document selector to delete it or view information. \nLong press the Back button to access the History list "</string>
-    <string name="version_text">Version %s</string>
+    <string name="version_text">Sürüm %s</string>
 	<string name="no_sdcard_error">Please insert an SD card and start And Bible again.</string>
     
     <!-- main menu -->
@@ -32,7 +32,7 @@
 	<!--  Search -->
     <string name="search_index">Arama İndeksi</string>
     <string name="index_creation_required">"An index is required to search.\n\nIndexes may be downloaded from the internet or created locally.\n\nDownloading is much quicker and downloaded indexes have more search features.\n\nAn internet connection is required to download indexes.\n"</string>
-    <string name="indexing_wait_msg">İndeksi yaratıldıktan sonra arama sayfasına götürülürsün.</string>
+    <string name="indexing_wait_msg">İndeks yaratıldıktan sonra arama sayfasına götürülürsün.</string>
     <string name="index">İndeks</string>
     <string name="index_download">İndir</string>
     <string name="index_not_available_for_download">Bu indeksi indirilemez</string>
@@ -45,15 +45,15 @@
 
     <!-- Search -->
     <string name="search_words_group_prompt">Ayetler bul</string>
-    <string name="search_all_words">Tüm sözler</string>
-    <string name="search_any_word">Herhangi söz</string>
+    <string name="search_all_words">Tüm kelime</string>
+    <string name="search_any_word">Herhangi kelime</string>
     <string name="search_phrase">İfade</string>
     <string name="search_result_count">%d sonuç bulundu</string>
     <string name="search_showing_first">Çok fazla sonuç bulunur. İlk %d gösterilir</string> 
-    <string name="search_bible_section_group_prompt">Nerede Ara</string>
+    <string name="search_bible_section_group_prompt">Nerede</string>
     <string name="search_all_bible">Bütün Kutsal Kitapta</string>
-    <string name="search_new_testament">Yeni Ahit</string>
-    <string name="search_old_testament">Eski Ahit</string>
+    <string name="search_new_testament">Yeni Antlaşma</string>
+    <string name="search_old_testament">Eski Antlaşma</string>
     <string name="search_current_book">Şimdiki Kitapta</string>
     <string name="error_executing_search">Arama sorgusu geçersizdi</string>
 
@@ -79,12 +79,12 @@
     <string name="prefs_text_size_title">Metin büyüklüğü</string>
     <string name="prefs_text_size_summary"></string>
     <string name="prefs_interface_locale_title">Uygulama dili</string>
-    <string name="prefs_interface_locale_summary">Başka arayüzey dili kullanılır</string>
+    <string name="prefs_interface_locale_summary">Başka arayüzey dili seç</string>
     <string name="locale_change_warning">Yeni dilin kullanması için bu uygulama şimdi yeniden başlatılır</string>
 
     <!-- Notes screen -->
-    <string name="no_chapter_notes">Bu bölüm için not yok</string>
-    <string name="no_verse_notes">Bu ayet için not yuk</string>
+    <string name="no_chapter_notes">Bu bölümde notları yok</string>
+    <string name="no_verse_notes">Bu ayette notları yuk</string>
     <string name="previous">Önceki</string>
     <string name="next">Sonraki</string>
 
@@ -93,15 +93,15 @@
     <string name="strongs_not_installed">Lütfen Strong\'un Grekçe ve İbranice sözlüğü indir</string>
     <string name="all_greek_occurrences">Tüm oluşları bul</string>
     <string name="all_hebrew_occurrences">Tüm oluşları bul</string>
-    <string name="no_indexed_bible_with_strongs_ref">Arama kullanarak Strong\'un numaraları dahil olan bir Kutsal Kitabı ve indeksleri indirmelisiniz.</string>
-    <string name="morph_robinson_not_installed">\'Robinson\'s Morphological Analysis Codes\' sözlüğü indirmelisiniz</string>
+    <string name="no_indexed_bible_with_strongs_ref">Arama sayfası aracılığıyla Strong\'un numaraları dahil olan bir Kutsal Kitabı ve indeksleri indirmelisiniz.</string>
+    <string name="morph_robinson_not_installed">Lütfen \'Robinson\'s Morphological Analysis Codes\' sözlüğü indirin</string>
     <string name="strongs_toggle_button_on">nnnn</string>
     <string name="strongs_toggle_button_off">nnnn</string>
 
     <!-- Module download -->
     <string name="download">Belgeler İndir</string>
     <string name="download_confirmation">İnternetten bir Kutsal Kitap indirmek ister misiniz?</string>
-    <string name="download_source_message">http://www.crosswire.org\n&amp; http://xiphos.org\'tan belgeler indirilir</string>
+    <string name="download_source_message">http://www.crosswire.org\n&amp; http://xiphos.org\'dan\nbelgeler indirilir</string>
     <string name="download_document_confirm_prefix">"İndir "</string>
     <string name="refresh_book_list">Mevcut Belgelerinin listesi yenlenmek ister misiniz?</string>
     <string name="error_downloading">İndirirken bir hata vardi. İnternet bağlantınızı kontrol edin.</string>
@@ -110,77 +110,77 @@
     <string name="wait_for_bible">Lütfen bu Kutsal Kitab\'ın indirilmesi için bekleyin. Ondan sonra anasayfaya götürüleceksiniz.</string>
     <string name="wait_for_bible_not_yet">Lütfen bekleyin. Bir Kutsal Kitap henüz yerleştirilmedi.</string>
     <string name="download_complete_no_bibles">Bir Kutsal Kitap bulunmadı. Lütfen Geri tıklayın ve tekrar deneyin.</string>
-    <string name="too_many_jobs">Çok fazla iş yürütmekte. Birinin bitmesini bekleyip tekrar deneyin.</string>
+    <string name="too_many_jobs">Şu anda çok fazla görev yürütmekte. Birinin bitmesini bekleyip tekrar deneyin.</string>
 
     <!-- Document context menu -->
-    <string name="delete">Delete</string>
-    <string name="delete_index">Delete search index</string>
-    <string name="about">About</string>
-    <string name="delete_doc">Delete %s?</string>
-    <string name="delete_search_index_doc">Delete index of %s?</string>
+    <string name="delete">Sil</string>
+    <string name="delete_index">Arama indeksi sil</string>
+    <string name="about">Hakkında</string>
+    <string name="delete_doc">Sil %s?</string>
+    <string name="delete_search_index_doc">%s\'in indeksi sil?</string>
     
     <!-- Verse context menu -->
     <string name="notes">Footnotes and references</string>
-    <string name="copy">Copy current verse</string>
-    <string name="share_verse">Share current verse ...</string>
+    <string name="copy">Şimdiki ayeti kopyala</string>
+    <string name="share_verse">Şimdiki ayeti paylaş ...</string>
     <string name="share_verse_subject">A Bible verse has been shared with you using And Bible</string>
 
     <!-- Bookmarks -->
-    <string name="bookmarks">Bookmarks</string>
-    <string name="add_bookmark">Add bookmark</string>
-    <string name="bookmark_added">Bookmark added</string>
-    <string name="bookmark_exists">Bookmark already exists</string>
-    <string name="bookmark_labels">Bookmark Labels</string>
+    <string name="bookmarks">Yer İmleri</string>
+    <string name="add_bookmark">Yer İmlerine ekle</string>
+    <string name="bookmark_added">Yer imi eklendi</string>
+    <string name="bookmark_exists">Yer imi önceden var oldu</string>
+    <string name="bookmark_labels">Yer İmleri Etiketler</string>
     <string name="assign_labels">Assign labels</string>
-    <string name="new_label">New Label</string>
-    <string name="new_label_prompt">Name</string>
+    <string name="new_label">Yeni Etiket</string>
+    <string name="new_label_prompt">Adı</string>
     
     <!-- Dictionary -->
-    <string name="dictionary">Dictionary</string>
-    <string name="search_dictionary_hint">Search dictionary</string>
-    <string name="dictionary_contents">Contents</string>
+    <string name="dictionary">Sözlük</string>
+    <string name="search_dictionary_hint">Sözlükte ara</string>
+    <string name="dictionary_contents">İcerik</string>
 
     <!-- General Book -->
-    <string name="general_book">Book</string>
-    <string name="general_book_contents">Contents</string>
+    <string name="general_book">Kitap</string>
+    <string name="general_book_contents">İcerik</string>
 
 
     <!-- Speak -->
     <!-- plurals tags referencing the below have been moved to untranslated_strings.xml -->
     <!-- Speak - Bible -->
-    <string name="one_chapter">%d chapter</string>
-    <string name="some_chapters">%d chapters</string>
-    <string name="rest_of_book">To end of book</string>
+    <string name="one_chapter">%d bölüm</string>
+    <string name="some_chapters">%d bölümler</string>
+    <string name="rest_of_book">Kitabın sonuna git</string>
     <!-- Speak - Commentary -->
-    <string name="one_verse">%d verse</string>
-    <string name="some_verses">%d verses</string>
-    <string name="rest_of_chapter">To end of chapter</string>
+    <string name="one_verse">%d ayet</string>
+    <string name="some_verses">%d ayetler</string>
+    <string name="rest_of_chapter">Bölümün sonuna git</string>
     <!-- Speak - Dictionary and other -->
-    <string name="one_page">%d page</string>
-    <string name="some_pages">%d pages</string>
+    <string name="one_page">%d sayfa</string>
+    <string name="some_pages">%d sayfalar</string>
     <!-- Speak - Common -->
-    <string name="stop">Stop</string>
-    <string name="tts_lang_not_available">Language is not available.</string>
+    <string name="stop">Durdur</string>
+    <string name="tts_lang_not_available">Dil bulunmadı.</string>
 	<string name="speak_queue">Queue</string>
-	<string name="speak_repeat">Repeat</string>
+	<string name="speak_repeat">Tekrarla</string>
 	
 	<!-- Document types -->    
-	<string name="doc_type_bible">Bible</string>
-	<string name="doc_type_commentary">Commentary</string>
-	<string name="doc_type_dictionary">Dictionary</string>
-	<string name="doc_type_book">Book</string>
+	<string name="doc_type_bible">Kutsal Kitap</string>
+	<string name="doc_type_commentary">Açıklama</string>
+	<string name="doc_type_dictionary">Sözlük</string>
+	<string name="doc_type_book">Kitap</string>
 
     <!-- Languages -->
-	<string name="lang_default">Default</string>
+	<string name="lang_default">Öntanımlı</string>
 	
     <!-- General -->
-    <string name="error_occurred">An error has occurred</string>
+    <string name="error_occurred">Bir hata oldu</string>
     <string name="okay">OK</string>
-    <string name="cancel">Cancel</string>
-    <string name="no">No</string>
-    <string name="error">"Error "</string>
-    <string name="more">More</string>
-    <string name="retry">Try Again</string>
-    <string name="please_wait">Please wait...</string>
-    <string name="all">All</string>
-<string name="select_text">Select text</string><string name="select_text_help">Drag slowly to select.\nThen touch selection to copy.</string><string name="error_no_content">No content for selected verse</string><string name="mynote">My Note</string><string name="mynote_add">Add My Note</string><string name="mynote_saved">My Note saved</string><string name="mynote_view_edit">My Note</string><string name="mynotes">My Notes</string><string name="prefs_show_mynotes_summary">Show icon in verses with My Note</string><string name="prefs_show_mynotes_title">Show My Note icons</string><string name="save">Save</string><string name="search_results">Find Results</string><string name="error_key_not_in_document">Not found in document</string><string name="error_page_too_large">Page is too large to be loaded</string></resources>
+    <string name="cancel">İptal</string>
+    <string name="no">Hayır</string>
+    <string name="error">"Hata "</string>
+    <string name="more">Fazla</string>
+    <string name="retry">Tekrar Deneyin</string>
+    <string name="please_wait">Lütfen bekleyin...</string>
+    <string name="all">Hepsi</string>
+<string name="select_text">Metni seç</string><string name="select_text_help">Drag slowly to select.\nThen touch selection to copy.</string><string name="error_no_content">Seçildiğin ayeti içeriği yok</string><string name="mynote">Notlarım</string><string name="mynote_add">Notlarıma ekle</string><string name="mynote_saved">Notlarım kaydedildi</string><string name="mynote_view_edit">Notlarım</string><string name="mynotes">Notlarım</string><string name="prefs_show_mynotes_summary">Show icon in verses with My Note</string><string name="prefs_show_mynotes_title">Show My Note icons</string><string name="save">Kaydet</string><string name="search_results">Sonuçlar</string><string name="error_key_not_in_document">Belgede bulunmadı</string><string name="error_page_too_large">Yüklenmesi için bu sayf</string></resources>
