--- a/AndBible/res/values-tr/strings.xml
+++ b/AndBible/res/values-tr/strings.xml
@@ -10,7 +10,7 @@
     <string name="app_name">And Bible</string>
 
 	<!-- Startup & Help -->
-    <string name="splash_top_text">"\n\'Tanrı, \"Işık olsun\" diye buyurdu ve ışık oldu.\'\nYaratılış 1:3"</string>
+    <string name="splash_top_text">\n\"Tanrı, \"Işık olsun\" diye buyurdu ve ışık oldu.\"\nYaratılış 1:3</string>
     <string name="help_text">Press the MENU key for actions\n\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger</string>
     <string name="help_text_long">"<b>Navigation</b>\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger \nDouble-tap toggles Fullscreen on/off. \n\n<b>Menu</b> \nPress the MENU key for actions \n\nTo download more documents press Menu/More/Download Documents \n\n<b>Speech</b>\nPress Speak to access a dialog to start or stop reading \n\n<b>Bookmarks</b>\nBookmarks can be added via the verse context menu. The Bookmark Manager is accessed via the main menu. The Bookmark Manager context menu allows bookmarks to be grouped using labels. \n\n<b>Search</b>\nSearch text can include special characters like *, ?, AND, OR, NOT (see \"Apache Lucene - Query Parser Syntax\" for more details) \n\n<b>Context Menus</b> \nLong press on the bible view to open the context menu for actions affecting the current verse. \nLong press on a document in the document selector to delete it or view information. \nLong press the Back button to access the History list "</string>
     <string name="version_text">Sürüm %s</string>
@@ -33,7 +33,7 @@
 	<!--  Search -->
     <string name="search_index">Arama İndeksi</string>
     <string name="index_creation_required">"Aramak için indeks gerekiyor.\n\nİndeksler internetten indirebilir veya cihazda oluşturabilir.\n\nİndirmek çok daha hızlı ve indirilen indexlerin arama funksiyonları daha fazla.\n\nİndexleri indirmek için internet bağlantısı gerekli.\n"</string>
-    <string name="indexing_wait_msg">İndeks yaratıldıktan sonra arama sayfasına götürülürsün.</string>
+    <string name="indexing_wait_msg">İndeks yaratıldıktan sonra arama sayfasına götürüleceksin.</string>
     <string name="index">İndeks</string>
     <string name="index_download">İndir</string>
     <string name="index_not_available_for_download">Bu indeksi indirilemez</string>
@@ -41,8 +41,8 @@
 
 	<!-- Tasks -->
     <string name="progress_status">Gelişim</string>
-    <string name="task_kill_warning">These long running tasks may terminate if you switch to another application before they finish.</string>
-    <string name="no_tasks_running">There are no tasks currently being executed.</string>
+    <string name="task_kill_warning">Bu uzun zaman süren görevler tamamlanmadan başka uygulamaya geçersen, işleri sonlandırabilir.</string>
+    <string name="no_tasks_running">Şu an çalışan görev bulunmuyor.</string>
 
     <!-- Search -->
     <string name="search_words_group_prompt">Ayetler bul</string>
@@ -52,7 +52,7 @@
     <string name="search_result_count">%d sonuç bulundu</string>
     <string name="search_showing_first">Çok fazla sonuç bulundu. İlk %d gösterilir</string> 
     <string name="search_bible_section_group_prompt">Nerede</string>
-    <string name="search_all_bible">Bütün Kutsal Kitap'ta</string>
+    <string name="search_all_bible">Bütün Kutsal Kitap\'ta</string>
     <string name="search_new_testament">Yeni Antlaşma</string>
     <string name="search_old_testament">Eski Antlaşma</string>
     <string name="search_current_book">Şimdiki Kitapta</string>
@@ -94,7 +94,7 @@
     <string name="strongs_not_installed">Lütfen Strong\'un Grekçe ve İbranice sözlüğü indir</string>
     <string name="all_greek_occurrences">Tüm oluşları bul</string>
     <string name="all_hebrew_occurrences">Tüm oluşları bul</string>
-    <string name="no_indexed_bible_with_strongs_ref">Arama sayfası aracılığıyla Strong\'un numaraları dahil olan bir Kutsal Kitabı ve indeksleri indirmelisiniz.</string>
+    <string name="no_indexed_bible_with_strongs_ref">Arama sayfası aracılığıyla Strong\'un numaraları dahil olan bir Kutsal Kitap\'ı ve indeksleri indirmelisiniz.</string>
     <string name="morph_robinson_not_installed">Lütfen \'Robinson\'s Morphological Analysis Codes\' sözlüğü indirin</string>
     <string name="strongs_toggle_button_on">nnnn</string>
     <string name="strongs_toggle_button_off">nnnn</string>
@@ -108,7 +108,7 @@
     <string name="error_downloading">İndirirken bir hata vardi. İnternet bağlantınızı kontrol edin.</string>
     <string name="no_internet_connection">İnternet\'e bağlanamaz</string>
     <string name="storage_space_warning">Yetersiz yerel depolama.</string>
-    <string name="wait_for_bible">Lütfen bu Kutsal Kitab\'ın indirilmesi için bekleyin. Ondan sonra anasayfaya götürüleceksiniz.</string>
+    <string name="wait_for_bible">Lütfen bu Kutsal Kitap\'ın indirilmesi için bekleyin. Ondan sonra anasayfaya götürüleceksiniz.</string>
     <string name="wait_for_bible_not_yet">Lütfen bekleyin. Bir Kutsal Kitap henüz yerleştirilmedi.</string>
     <string name="download_complete_no_bibles">Bir Kutsal Kitap bulunmadı. Lütfen Geri tıklayın ve tekrar deneyin.</string>
     <string name="too_many_jobs">Şu anda çok fazla görev yürütmekte. Birinin bitmesini bekleyip tekrar deneyin.</string>
@@ -175,24 +175,24 @@
 	
     <!-- General -->
     <string name="error_occurred">Bir hata oldu</string>
-    <string name="okay">OK</string>
+    <string name="okay">Tamam</string>
     <string name="cancel">İptal</string>
     <string name="no">Hayır</string>
-    <string name="error">"Hata "</string>
+    <string name="error">Hata </string>
     <string name="more">Fazla</string>
     <string name="retry">Tekrar Deneyin</string>
     <string name="please_wait">Lütfen bekleyin...</string>
     <string name="all">Hepsi</string>
 	<string name="select_text">Metni seç</string>
-	<string name="select_text_help">Drag slowly to select.\nThen touch selection to copy.</string>
+	<string name="select_text_help">Seçmek için yavaşça sürükleyin.\nSeçtikten sonra kopyalamak için dökün.</string>
 	<string name="error_no_content">Seçildiğin ayeti içeriği yok</string>
 	<string name="mynote">Notlarım</string>
 	<string name="mynote_add">Notlarıma ekle</string>
 	<string name="mynote_saved">Notlarım kaydedildi</string>
 	<string name="mynote_view_edit">Notlarım</string>
 	<string name="mynotes">Notlarım</string>
-	<string name="prefs_show_mynotes_summary">Show icon in verses with My Note</string>
-	<string name="prefs_show_mynotes_title">Show My Note icons</string>
+	<string name="prefs_show_mynotes_summary">Notlarım içeren ayetlerde ikon gözüksün</string>
+	<string name="prefs_show_mynotes_title">Notlarım ikonları gözüksün</string>
 	<string name="save">Kaydet</string>
 	<string name="search_results">Sonuçlar</string>
 	<string name="error_key_not_in_document">Belgede bulunmadı</string>
