--- a/AndBible/res/values-tr/strings.xml
+++ b/AndBible/res/values-tr/strings.xml
@@ -11,8 +11,21 @@
 
 	<!-- Startup & Help -->
     <string name="splash_top_text">\n\"Tanrı, \"Işık olsun\" diye buyurdu ve ışık oldu.\"\nYaratılış 1:3</string>
-    <string name="help_text">Press the MENU key for actions\n\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger</string>
-    <string name="help_text_long">"<b>Navigation</b>\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger \nDouble-tap toggles Fullscreen on/off. \n\n<b>Menu</b> \nPress the MENU key for actions \n\nTo download more documents press Menu/More/Download Documents \n\n<b>Speech</b>\nPress Speak to access a dialog to start or stop reading \n\n<b>Bookmarks</b>\nBookmarks can be added via the verse context menu. The Bookmark Manager is accessed via the main menu. The Bookmark Manager context menu allows bookmarks to be grouped using labels. \n\n<b>Search</b>\nSearch text can include special characters like *, ?, AND, OR, NOT (see \"Apache Lucene - Query Parser Syntax\" for more details) \n\n<b>Context Menus</b> \nLong press on the bible view to open the context menu for actions affecting the current verse. \nLong press on a document in the document selector to delete it or view information. \nLong press the Back button to access the History list "</string>
+    <string name="help_text">Komutlar için MENÜ tuşunu basın.\n\nÖnceki veya sonraki bölüme geçmek için iztopu veya yön tuşları bas veya parmağınızla ekranı kaydırın.</string>
+    <string name="help_text_long"><b>Navigasyon</b>\nÖnceki veya sonraki bölüme geçmek için iztopu veya yön tuşları bas veya parmağınızla ekranı kaydırın
+    \nÇıft dökünmak Tamekran modu açıp kapatır.
+    \n\n<b>Menü</b>
+    \nKomutlar içın MENÜ tuşunu basın.
+	\n\nDaha fazla belgeyi indirmek için Menü/Daha Fazla/Belgeler İndir'i basın
+    \n\n<b>Söyle</b>\nSelsi okumasını başlayıp durduran diyalogu görmek için Söyle'i bas
+    \n\n<b>Notlarıme</b>\nAyet içerik menüsüde bulunan Notlarım komutun aracılığıyla notları ekleyenebilir. Var olan notları ana menüsünden erişilebilir.
+    \n\n<b>Yerimi</b>\nYerimileri, ayet içerik menüsünden eklenebilir. Yerimi yöneticisi ana menüsünden erişilebilir. Yerimi yöneticisi içerik menüsünü kullanarak yerimileri, ekiketlere göre sıralayabilir.
+    \n\n<b>Arama</b>\nArama sorgular *, ?, AND, OR, NOT gibi özel karakterler içerebilir.  (daha fazla bilgi için "Apache Lucene - Query Parser Syntax" okuyun)
+    \n\n<b>İçerik Menüleri</b>
+    \nGeçerli ayeti etkilenen komutlar için Kitsal Kitap okuma sayfanın üzerinde uzun süreli basarak içerik menüsünü açın.
+    \nSilmek veya bilgisini görmek için belge menüsüde belgenin üzerinde uzun süreli basın.
+    \nGeçmiş Listesi için Geri tuşu uzun süreli basın
+    </string>
     <string name="version_text">Sürüm %s</string>
 	<string name="no_sdcard_error">Lütfen SD kartı takın ve And Bible yeniden başlatın.</string>
     
@@ -179,7 +192,7 @@
     <string name="cancel">İptal</string>
     <string name="no">Hayır</string>
     <string name="error">Hata </string>
-    <string name="more">Fazla</string>
+    <string name="more">Daha Fazla</string>
     <string name="retry">Tekrar Deneyin</string>
     <string name="please_wait">Lütfen bekleyin...</string>
     <string name="all">Hepsi</string>
