--- a/AndBible/res/values-tr/strings.xml
+++ b/AndBible/res/values-tr/strings.xml
@@ -10,7 +10,7 @@
 
 	<!-- Startup & Help -->
     <string name="splash_top_text">"\n\'Tanrı, \"Işık olsun\" diye buyurdu ve ışık oldu.\'\nYaratılış 1:3"</string>
-    <string name="help_text">Press the MENU key for actions\n\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger</string>
+    <string name="help_text">Etkinlikler için Menü düğmeyi basın\n\nSonraki veya önceki bölüme gitmek için ekranda parmağınız kaydırın.</string>
     <string name="help_text_long">"<b>Navigation</b>\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger \nDouble-tap toggles Fullscreen on/off. \n\n<b>Menu</b> \nPress the MENU key for actions \n\nTo download more documents press Menu/More/Download Documents \n\n<b>Speech</b>\nPress Speak to access a dialog to start or stop reading \n\n<b>Bookmarks</b>\nBookmarks can be added via the verse context menu. The Bookmark Manager is accessed via the main menu. The Bookmark Manager context menu allows bookmarks to be grouped using labels. \n\n<b>Search</b>\nSearch text can include special characters like *, ?, AND, OR, NOT (see \"Apache Lucene - Query Parser Syntax\" for more details) \n\n<b>Context Menus</b> \nLong press on the bible view to open the context menu for actions affecting the current verse. \nLong press on a document in the document selector to delete it or view information. \nLong press the Back button to access the History list "</string>
     <string name="version_text">Sürüm %s</string>
 	<string name="no_sdcard_error">Please insert an SD card and start And Bible again.</string>
@@ -44,7 +44,7 @@
     <string name="no_tasks_running">There are no tasks currently being executed.</string>
 
     <!-- Search -->
-    <string name="search_words_group_prompt">Ayetler bul</string>
+    <string name="search_words_group_prompt">Ayette ara</string>
     <string name="search_all_words">Tüm kelime</string>
     <string name="search_any_word">Herhangi kelime</string>
     <string name="search_phrase">İfade</string>
@@ -63,8 +63,8 @@
     <string name="prefs_verse_per_line_title">Her ayet bir satırda</string>
     <string name="prefs_verse_per_line_summary">Her ayet yeni bir satırda gösterilir</string>
     <string name="prefs_show_notes_title">Notlar</string>
-    <string name="prefs_show_notes_summary">Notları gözterilir</string>
-    <string name="prefs_show_strongs_title">Strong\'un Numaraları göster</string>
+    <string name="prefs_show_notes_summary">"Dipnotlar ve referanslar gösterilir"</string>
+    <string name="prefs_show_strongs_title">Strong\'un Numaraları</string>
     <string name="prefs_show_strongs_summary">Gerkçe ve İbranice tanımlara bağlantılar gösterilir</string>
     <string name="prefs_show_morphology_title">Morfolojik kodları</string>
     <string name="prefs_show_morphology_summary">Robinson\'un Grekçe morfolojiği gösterilir</string>
@@ -120,9 +120,9 @@
     <string name="delete_search_index_doc">%s\'in indeksi sil?</string>
     
     <!-- Verse context menu -->
-    <string name="notes">Footnotes and references</string>
-    <string name="copy">Şimdiki ayeti kopyala</string>
-    <string name="share_verse">Şimdiki ayeti paylaş ...</string>
+    <string name="notes">Dipnotlar ve referanslar</string>
+    <string name="copy">Şimdiki ayet kopyala</string>
+    <string name="share_verse">Şimdiki ayet paylaş ...</string>
     <string name="share_verse_subject">A Bible verse has been shared with you using And Bible</string>
 
     <!-- Bookmarks -->
@@ -183,4 +183,4 @@
     <string name="retry">Tekrar Deneyin</string>
     <string name="please_wait">Lütfen bekleyin...</string>
     <string name="all">Hepsi</string>
-<string name="select_text">Metni seç</string><string name="select_text_help">Drag slowly to select.\nThen touch selection to copy.</string><string name="error_no_content">Seçildiğin ayeti içeriği yok</string><string name="mynote">Notlarım</string><string name="mynote_add">Notlarıma ekle</string><string name="mynote_saved">Notlarım kaydedildi</string><string name="mynote_view_edit">Notlarım</string><string name="mynotes">Notlarım</string><string name="prefs_show_mynotes_summary">Show icon in verses with My Note</string><string name="prefs_show_mynotes_title">Show My Note icons</string><string name="save">Kaydet</string><string name="search_results">Sonuçlar</string><string name="error_key_not_in_document">Belgede bulunmadı</string><string name="error_page_too_large">Yüklenmesi için bu sayf</string></resources>
+<string name="select_text">Metni seç</string><string name="select_text_help">Seçmek için yavaşça sürükleyin.\nSeçtikten sonra kopyalamak için ona dokun.</string><string name="error_no_content">Seçildiğin ayeti içeriği yok</string><string name="mynote">Notlarım</string><string name="mynote_add">Notlarıma ekle</string><string name="mynote_saved">Notlarım kaydedildi</string><string name="mynote_view_edit">Notlarım</string><string name="mynotes">Notlarım</string><string name="prefs_show_mynotes_summary">Bir ayetin notları varsa metinde bir ikon gösterilir</string><string name="prefs_show_mynotes_title">Not ikonları metinde</string><string name="save">Kaydet</string><string name="search_results">Sonuçlar</string><string name="error_key_not_in_document">Belgede bulunmadı</string><string name="error_page_too_large">Yüklenmesi için bu sayf</string></resources>
