--- a/AndBible/res/values-tr/strings.xml
+++ b/AndBible/res/values-tr/strings.xml
@@ -15,14 +15,14 @@
     <string name="help_text_long"><b>Navigasyon</b>\nÖnceki veya sonraki bölüme geçmek için iztopu veya yön düğmeleri bas veya parmağınızla ekranı kaydırın
     \nÇıft dökünmak Tamekran modu açıp kapatır.
     \n\n<b>Menü</b>
-    \nKomutlar içın MENÜ düğmeyi basın.
+    \nEtkinlikler içın MENÜ düğmeyi basın.
 	\n\nDaha fazla belgeleri indirmek için Menü/Daha Fazla/Belgeler İndir\'i basın
     \n\n<b>Söyle</b>\nSelsi okumasını başlayıp durduran diyalogu görmek için Söyle\'i bas
-    \n\n<b>Notlarıme</b>\nAyet içerik menüsüde bulunan Notlarım komutun aracılığıyla notları ekleyenebilir. Var olan notları ana menüsünden erişilebilir.
+    \n\n<b>Notlarıme</b>\nAyet içerik menüsüde bulunan Notlarım etkinliğin aracılığıyla notları ekleyenebilir. Var olan notları ana menüsünden erişilebilir.
     \n\n<b>Yerimi</b>\nYerimileri, ayet içerik menüsünden eklenebilir. Yerimi yöneticisi ana menüsünden erişilebilir. Yerimi yöneticisi içerik menüsünü kullanarak yerimileri, ekiketlere göre sıralayabilir.
     \n\n<b>Arama</b>\nArama sorgular *, ?, AND, OR, NOT gibi özel karakterler içerebilir.  (daha fazla bilgi için "Apache Lucene - Query Parser Syntax" okuyun)
     \n\n<b>İçerik Menüleri</b>
-    \nGeçerli ayeti etkilenen komutlar için Kitsal Kitap okuma sayfanın üzerinde uzun süreli basarak içerik menüsünü açın.
+    \nGeçerli ayeti etkilenen etkinlikler için Kitsal Kitap okuma sayfanın üzerinde uzun süreli basarak içerik menüsünü açın.
     \nSilmek veya bilgisini görmek için belge menüsüde belgenin üzerinde uzun süreli basın.
     \nGeçmiş Listesi için Geri düğmeyi uzun süreli basın</string>
     <string name="version_text">Sürüm %s</string>
