--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -93,7 +93,8 @@
     <string name="prefs_navigate_to_verse_summary">Choose verse (and chapter) when selecting a passage</string>
     <string name="prefs_text_size_title">Text size</string>
     <string name="prefs_text_size_summary">See more or see more clearly</string>
-    <string name="prefs_interface_locale_title">Application language</string>
+    <string name="prefs_text_size_sample_text">Sample text</string>
+        <string name="prefs_interface_locale_title">Application language</string>
     <string name="prefs_interface_locale_summary">Select custom user interface language</string>
     <string name="locale_change_warning">Application will be restarted to switch to the new interface language</string>
 
